# swarm

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.yaml.example  coverage.json  pyproject.toml  version.py
agent/: __init__.py  context.py  loop.py  runner.py  subagent.py
assets/: logo-concepts.html
auth/: __init__.py  callback_server.py  middleware.py  oauth.py  token_store.py
bus/: __init__.py  queue.py
cli/: __init__.py  chat.py  main.py  stream.py
config/: __init__.py  loader.py  paths.py  schema.py
cron/: __init__.py  parser.py  scheduler.py
delivery/: __init__.py  delivery.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: architecture.md  auth.md  configuration.md  deployment.md  feishu-setup.md  logging.md  plugins.md  quickstart.md  skills.md  tools.md
events/: __init__.py  bus.py
gateway/: __init__.py  feishu_actions.py  feishu_events.py  feishu_media.py  feishu_message.py  feishu_reply.py  feishu_streaming.py  feishu_token.py  feishu_ws.py
logging_/: __init__.py  handlers.py  setup.py
mcp/: __init__.py  client.py  server.py
memory/: __init__.py  compressor.py  dream.py  knowledge_graph.py  recall.py  short_term.py  store.py
plugins/: __init__.py  loader.py  protocol.py
providers/: __init__.py  anthropic.py  base.py  factory.py  fallback.py  openai_compat.py  pool.py  retry.py  token_counter.py
session/: __init__.py  manager.py
skills/: __init__.py  loader.py
state/: __init__.py  migration.py  snapshot.py  store.py
swarm/: __init__.py  __main__.py
tests/: __init__.py  conftest.py  test_agent.py  test_auth.py  test_bus.py  test_cli_commands.py  test_compressor.py  test_concurrency.py  test_config.py  test_context.py  test_cron.py  test_delivery.py  test_discovery.py  test_dream.py  test_edge_cases.py  test_events.py  test_feishu_events.py  test_feishu_message.py  test_feishu_reply.py  test_feishu_streaming.py  test_integration.py  test_mcp.py  (+14 more)
(+110 files in other folders)
