[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarm-agent"
version = "0.1.1"
description = "Lightweight, concurrency-safe, multi-tenant Feishu AI Agent framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Swarm Contributors"}]
keywords = ["feishu", "lark", "ai-agent", "llm", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "chromadb>=0.5",
    "lark-oapi>=1.3",
    "cryptography>=42.0",
    "tiktoken>=0.7",
    "typer>=0.12",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "jinja2>=3.1",
    "aiofiles>=24.0",
    "apscheduler>=3.10",
    "openai>=1.0",
    "anthropic>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
swarm = "cli.main:app"

[project.entry-points."swarm.plugins"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "real_llm: Integration tests that require a real LLM API key (ANTHROPIC_AUTH_TOKEN).",
]

[tool.hatch.build.targets.wheel]
packages = [
    "agent", "auth", "bus", "cli", "config", "cron", "delivery",
    "events", "gateway", "logging_", "mcp", "memory", "plugins",
    "providers", "session", "skills", "state", "tools", "utils",
    
]
force-include = { "skills_builtin" = "swarm_skills_builtin" }
